--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <nav class="navigation">
         <ul>
           <li>
-            <a href="#">Studio</a>
+            <a class="studio" href="#">Studio</a>
           </li>
           <li>
             <a href="#">Portfolio</a>
