--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
       <h1 class="title">Effective Solutions for Your Business Order Service</h1>
       <br />
-      <button class="order-service" type="button">Order Service</button>
+      <button class="button" type="button">Order Service</button>
     </main>
     <section class="strategy">
       <ul>
