--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       >
         <ul>
           <li>
-            <a class="studio" href="./index.html">Studio</a>
+            <a class="navigation-item studio" href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a class="navigation-item" href="">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a class="navigation-item" href="">Contacts</a>
           </li>
         </ul>
       </nav>
