--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     <header>
      
       <nav class="navigation">
-        <a class="logo" href="./index.html" target="_self"
+        <a class="logo header-logo" href="./index.html" target="_self"
         >Web<span class="accent">Studio</span></a
       >
-        <ul>
-          <li>
-            <a class="navigation-item studio" href="./index.html">Studio</a>
+        <ul class="nav-list">
+          <li class="list-item">
+            <a class="nav-link studio" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a class="navigation-item" href="">Portfolio</a>
+          <li class="list-item">
+            <a class="nav-link" href="">Portfolio</a>
           </li>
-          <li>
-            <a class="navigation-item" href="">Contacts</a>
+          <li class="list-item">
+            <a class="nav-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -196,7 +196,7 @@
     </section>
 
     <footer class="footer">
-      <a class="logo-footer" href="#">
+      <a class="logo logo-footer" href="#">
         Web <span class="accent-footer">Studio</span></a
       >
       <p class="footer-text">
