--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       >
         <ul class="nav-list">
           <li class="list-item">
-            <a class="nav-link studio" href="./index.html">Studio</a>
+            <a class="nav-link" href="./index.html">Studio</a>
           </li>
           <li class="list-item">
             <a class="nav-link" href="">Portfolio</a>
