--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-   
+
     <link
     href=“https://fonts.googleapis.com/css2?familyRaleway:ital,wght@0,700;1,700&familyRoboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&displayswap”
     rel=“stylesheet” />
@@ -15,11 +15,10 @@
   </head>
   <body>
     <header>
-     
       <nav class="navigation">
         <a class="logo header-logo" href="./index.html" target="_self"
-        >Web<span class="accent">Studio</span></a
-      >
+          >Web<span class="accent">Studio</span></a
+        >
         <ul class="nav-list">
           <li class="list-item">
             <a class="nav-link" id="studio" href="./index.html">Studio</a>
@@ -34,8 +33,14 @@
       </nav>
       <br /><br /><br />
       <address class="contacts">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul class="contacts-list">
+          <li class="contacts-item">
+            <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+          </li>
+          <li class="contacts-item">
+            <a class="contacts-link href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
     <main>
@@ -97,12 +102,12 @@
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
-        
+
         <li>
           <img src="images/img2.jpg" alt="Tom Ford" width="264" height="260" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
-        </li> 
+        </li>
         <li>
           <img
             src="images/img3.jpg"
@@ -112,7 +117,7 @@
           />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
-        </li> 
+        </li>
         <li>
           <img
             src="images/img4.jpg"
@@ -122,7 +127,7 @@
           />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
-        </li> 
+        </li>
       </ul>
     </section>
     <section class="portfolio">
@@ -138,7 +143,7 @@
 
           <h3>Banking App</h3>
           <p>App</p>
-        </li> 
+        </li>
         <li>
           <img
             src="images/cashless.jpg"
@@ -148,7 +153,7 @@
           />
           <h3>Cashless Payment</h3>
           <p>Marketing</p>
-        </li> 
+        </li>
         <li>
           <img
             src="images/meditation.jpg"
