--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a><br />
           </li>
           <li class="contacts-item">
-            <a class="contacts-link href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
