--- a/index.html
+++ b/index.html
@@ -35,20 +35,24 @@
       <address class="contacts">
         <ul class="contacts-list">
           <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+            <a class="contacts-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            ><br />
           </li>
           <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contacts-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
-    <main>
+    <main class="section-1">
       <h1 class="title">Effective Solutions for Your Business Order Service</h1>
       <br />
       <button class="button" type="button">Order Service</button>
     </main>
-    <section class="strategy">
+    <section class="section-2">
       <ul>
         <li>
           <div>
