--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
         </ul>
       </address>
     </header>
-    <main class="section-1">
+    <main>
+      <section class="section-1">
       <h1 class="title">Effective Solutions for Your Business Order Service</h1>
       <br />
       <button class="button" type="button">Order Service</button>
+    </section>
     </main>
     <section class="section-2">
       <ul>
