--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     <main>
       <section class="section-one">
       <h1 class="title">Effective Solutions for Your Business Order Service</h1>
-      <br />
+      
       <button class="button" type="button">Order Service</button>
     </section>
     </main>
-    <section class="section-2">
+    <section class="section-two">
       <ul>
         <li>
           <div>
