--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
     </header>
     <main>
       <section class="section-one">
-      <h1 class="title">Effective Solutions for Your Business Order Service</h1>
-      
-      <button class="button" type="button">Order Service</button>
-    </section>
+        <h1 class="title">
+          Effective Solutions for Your Business Order Service
+        </h1>
+
+        <button class="button" type="button">Order Service</button>
+      </section>
     </main>
-    <section class="section-two">
+    <section>
       <ul>
         <li>
           <div>
