--- a/index.html
+++ b/index.html
@@ -55,161 +55,157 @@
 
         <button class="button" type="button">Order Service</button>
       </section>
-    
-    <div>
+
       <section>
         <ul>
           <li>
-            <div>
-              <h3>Strategy</h3>
-              <p>
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </div>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
           <li>
-            <div>
-              <h3>Punctuality</h3>
-              <p>
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </div>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
           </li>
           <li>
-            <div>
-              <h3>Diligence</h3>
-              <p>
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </div>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
           </li>
           <li>
-            <div>
-              <h3>Technologies</h3>
-              <p>
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </div>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
           </li>
         </ul>
       </section>
-    </div>
-    <section class="team">
-      <h2>Our Team</h2>
-      <ul>
-        <li>
-          <img
-            src="images/img1.jpg"
-            alt="Mark Guerrero"
-            width="264"
-            height="260"
-          />
 
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
+      <section class="team">
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="images/img1.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
 
-        <li>
-          <img src="images/img2.jpg" alt="Tom Ford" width="264" height="260" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img
-            src="images/img3.jpg"
-            alt="Camila Garcia"
-            width="264"
-            height="260"
-          />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="images/img4.jpg"
-            alt="Daniel Wilson"
-            width="264"
-            height="260"
-          />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
-    <section class="portfolio">
-      <h2>Our Portfolio</h2>
-      <ul class="row-1">
-        <li>
-          <img
-            src="images/banking.jpg"
-            alt="Banking App"
-            width="360"
-            height="300"
-          />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
 
-          <h3>Banking App</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="images/cashless.jpg"
-            alt="Cashless Payment"
-            width="360"
-            height="300"
-          />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="images/meditation.jpg"
-            alt="Meditation App"
-            width="360"
-            height="300"
-          />
-          <h3>Meditation App</h3>
-          <p>App</p>
-        </li>
-      </ul>
-      <ul class="row-2">
-        <li>
-          <img
-            src="images/taxi.jpg"
-            alt="Taxi Service"
-            width="360"
-            height="300"
-          />
+          <li>
+            <img
+              src="images/img2.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="images/img3.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images/img4.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section class="portfolio">
+        <h2>Our Portfolio</h2>
+        <ul class="row-1">
+          <li>
+            <img
+              src="images/banking.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
 
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="images/screen.jpg"
-            alt="Screen Illustration"
-            width="360"
-            height="300"
-          />
-          <h3>Screen Illustration</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="images/online.jpg"
-            alt="Online Courses"
-            width="360"
-            height="300"
-          />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-      </ul>
-    </section>
-  </main>
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="images/cashless.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images/meditation.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+        </ul>
+        <ul class="row-2">
+          <li>
+            <img
+              src="images/taxi.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images/screen.jpg"
+              alt="Screen Illustration"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustration</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="images/online.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer class="footer">
       <a class="logo logo-footer" href="#">
         Web <span class="accent-footer">Studio</span></a
