--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <button class="button" type="button">Order Service</button>
       </section>
 
-      <section>
+      <section class="section-two">
         <h2>properties</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="sec-two-list">
+          <li class="sec-two-list-item">
+            <h3 class="sec-two-h3">Strategy</h3>
+            <p class="sec-two-p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
