--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
-          </li class="sec-two-list-item">
-          <li>
+          </li>
+          <li class="sec-two-list-item">
             <h3 class="sec-two-h">Diligence</h3>
             <p class="sec-two-p">
               Research and confirm brands that present the strongest digital
@@ -90,10 +90,10 @@
         </ul>
       </section>
 
-      <section class="team">
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="section-three">
+        <h2 class="sec-three-htwo">Our Team</h2>
+        <ul class="sec-three-list">
+          <li class="sec-three-list-item">
             <img
               src="images/img1.jpg"
               alt="Mark Guerrero"
@@ -101,39 +101,39 @@
               height="260"
             />
 
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="sec-three-hthree">Mark Guerrero</h3>
+            <p class="sec-three-p">Product Designer</p>
           </li>
 
-          <li>
+          <li class="sec-three-list-item">
             <img
               src="images/img2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="sec-three-hthree">Tom Ford</h3>
+            <p class="sec-three-p">Frontend Developer</p>
           </li>
-          <li>
+          <li class="sec-three-list-item">
             <img
               src="images/img3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="sec-three-hthree">Camila Garcia</h3>
+            <p class="sec-three-p">Marketing</p>
           </li>
-          <li>
+          <li class="sec-three-list-item">
             <img
               src="images/img4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="sec-three-hthree">Daniel Wilson</h3>
+            <p class="sec-three-p">UI Designer</p>
           </li>
         </ul>
       </section>
