--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
           <li>
             <img
               src="./images/screen.jpg"
-              alt="Screen Illustration"
+              alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h3 class="section-four-hthree">Screen Illustration</h3>
+            <h3 class="section-four-hthree">Screen Illustrations</h3>
             <p class="section-four-p">Design</p>
           </li>
           <li>
@@ -205,7 +205,7 @@
             <h3 class="section-four-hthree">Online Courses</h3>
             <p class="section-four-p">Marketing</p>
           </li>
-        
+        </ul>
       </section>
     </main>
     
